# DarkPatternExperiments

./: .gitignore  Modelfile  finetuning.ipynb  general_purpose.py  llmfine.ipynb  main.py  multilabel.py  old_main.py  pyproject.toml  test.ipynb
