[tool.poetry]
name = "dpbh"
version = "0.1.0"
description = ""
authors = ["zubairmh <zubair.mh@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = {extras = ["torch"], version = "^4.36.2"}
lm-format-enforcer = "^0.8.0"
pydantic = "^2.5.3"
safetensors = "^0.4.1"
polars = "^0.20.2"
pandas = "^2.1.4"
datasets = "^2.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
